cleaning up, suppressing message error

--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 .task.done {
   background: lightgreen;
 }
+.task.done label {
+  text-decoration: line-through;
+}
 
 .description {
   color: slategrey;
